Issue #1 fix: serch text alignment

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -457,8 +457,8 @@
   position: absolute;
   background: white;
   text-align: left;
-  width: 436px;
-  margin-left: 82px;
+  width: 512px;
+  margin-left: 103px;
 }
 #search-suggestions .result .content .title {
   font-size: 15px;
